terraform/modules/nsg/nsg.tf
resource "azurerm_network_security_group" "nsg" {
    resource_group_name = "${var.resource_group}"
    name                = "nsg-${var.application_type}-${var.resource_type}"
    location            = "${var.location}"
 
  security_rule {
        name                       = "AllowSSHIn"
        priority                   = 1001
        direction                  = "Inbound"
        access                     = "Allow"
        protocol                   = "Tcp"
        source_port_range          = "*"
        destination_port_range     = "22"
        source_address_prefix      = "*"
        destination_address_prefix = "*"
    }
  security_rule {
    name                       = "5000"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "5000"
    source_address_prefix      = "${var.address_prefix}"
    destination_address_prefix = "*"
  }
}
resource "azurerm_subnet_network_security_group_association" "subnet_sga" {
    subnet_id                 = "${var.subnet_id}"
    network_security_group_id = azurerm_network_security_group.nsg.id
}
